cambios en pagina administrativa

--- a/pasteleria_Mi_Deleite/administrador.html
+++ b/pasteleria_Mi_Deleite/administrador.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav>
-		<img src="./Imgs/MD_proto.png" alt="Logo pasteleria Mi Deleite" class="logo">
+		<a href="index.html"><img src="./Imgs/MD_proto.png" alt="Logo pasteleria Mi Deleite" class="logo"></a>
 		<div class="brand">
 			<p>PASTELERIA MI DELEITE</p>
 			<p>"Para deleitar tu paladar"</p>
@@ -48,28 +48,28 @@
 
     <section class="main">
         <div class="mainContainer">
-            <div class="card">
+            <div class="card1">
                 <div class="mainCardHeader">
                     <h3>PEDIDOS EN PROCESO</h3>
                 </div>
                 <p><a href="#"><b>HAZ CLICK AQUI</b></a></p>
             </div>
 
-            <div class="card">
+            <div class="card2">
                 <div class="mainCardHeader">
                     <h3>PANEL DE ADMINISTRADOR</h3>
                 </div>
                 <p><a href="#"><b>HAZ CLICK AQUI</b></a></p>
             </div>
 
-            <div class="card">
+            <div class="card3">
                 <div class="mainCardHeader">
                     <h3>PEDIDOS ENTREGADOS</h3>
                 </div>   
                 <p><a href="#"><b>HAZ CLICK AQUI</b></a></p>
             </div>
 
-            <div class="card">
+            <div class="card4">
                 <div class="mainCardHeader">
                     <h3>INVENTARIO</h3>
                 </div>
